--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .logo {
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .logo > a img {
@@ -42,6 +42,7 @@ body {
 }
 
 .about {
+    margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -53,18 +54,18 @@ body {
 
 .edu {
     width: 100%;
+    margin-top: 50px;
     display: block;
 }
-.edu > .edu-image {
+.edu-image {
     width: 100%;
     display: block;
 }
 
 .cont {
-    width: 300px;
+    width: 1500px;
     margin-top: 50px;
-    margin-left: 40%;
-    margin-right: 40%;
+    margin-left: -50px;
 }
 
 .contactMethod {
@@ -73,7 +74,7 @@ body {
     margin: 10px 10px;
     border: 1px solid #000000;
     padding: 0 5px;
-    float: left;
+    float: right;
 }
 
 .contactMethod > h1 {
