--- a/style.css
+++ b/style.css
@@ -51,6 +51,13 @@ body {
     position: relative;
 }
 
+.flexContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .image {
     display: block;
     width: 100%;
@@ -187,8 +194,6 @@ body {
 .cont {
     width: 100%;
     margin-top: 50px;
-    float: left;
-    margin-left: 5%;
 }
 
 .contactMethod {
