Made a few updates - messy

--- a/style.css
+++ b/style.css
@@ -60,47 +60,17 @@ body {
 
 .image {
     display: block;
-    width: 100%;
+    width: 200px;
     height: auto;
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
-}
-
-.container:hover .overlay {
-   opacity: 1;
-}
-
-.container:hover .image {
-   opacity: 0.2;
-}
-
-.container:active .overlay {
-   opacity: 1;
-}
-
-.container:active .image {
-   opacity: 0.2;
 }
 
 .text {
     color: #000000;
     text-align: left;
     font-family: 'Arial', Sans-Serif;
+    padding: 50px 50px;
     font-size: 16px;
-    position: absolute;
-    top: 25%;
-    left: 25%;
-    transform: translate(-25%, -25%);
+    max-width: 350px;
 }
 
 .content > h1 {
